--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,46 +1,15 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}
-
-.error{
+.error {
   color: red;
 }
-.reponse{
-  margin-left: 10px;
+
+.good {
+  --background: green;
 }
 
-label{
-  font-size: 2em;
+.bad {
+  --background: red;
 }
 
-.question{
-  font-size: 1,3em;
-}
-.content{
-  margin-left: 50px;
-  margin-top: 20px;
+.unknow {
+  --background: grey;
 }
